# data-loader-v3

./: README.md  package.json  pnpm-lock.yaml
clients/js/: package.json  pnpm-lock.yaml
clients/rust/: Cargo.toml
clients/rust/src/: lib.rs
program/: Cargo.toml  idl.json
program/src/: instruction.rs  lib.rs  processor.rs
scripts/: generate-clients.mjs
