[package]
name = "qed-data-loader-program"
version = "0.0.0"
edition = "2021"
readme = "./README.md"
license-file = "../LICENSE"
publish = false

[package.metadata.solana]
program-id = "G85FRPLfrS9HKdxvGNYWBpjmBfqSwtVdYjk92KqN737s"
program-dependencies = []

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
bincode = "1.3.3"
borsh = "^1.5.3"
num-derive = "^0.3"
num-traits = "^0.2"
serde = { version = "^1.0", features = ["derive"] }
shank = "^0.4.2"
solana-program = "~2.1"
thiserror = "^1.0"

[dev-dependencies]
mollusk-svm = { version = "0.0.15", features = ["fuzz-fd"] }
solana-sdk = "~2.1"

[features]
bpf-entrypoint = []
test-sbf = []
